--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "compilerOptions": {
-        "outDir": "js", // biên dịch vào thư mục js
+        "outDir": "dist", // biên dịch vào thư mục dist (các server k biên dịch typescript)
         "target": "ES6", // cho phép biên dịch code Typescript sang kiểu ES6
         "module": "CommonJS", // commonJS là tiêu chuẩn được sử dụng trong nodejs để làm việc với các module
         "removeComments": true, // xóa comment khi biên dịch sang file js
         "esModuleInterop": true //duoc dung tu khoa import thay cho require
     }
 }
+//tsc biên dịch ts -> js
