--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts",
+    "build": "tsc",
+    "add-build": "git add dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "build",
+    "add-build"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -15,7 +21,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "md5": "^2.3.0",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "pre-commit": "^1.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
